deploy: be870e138d31f1c79329fa1ec2d1272941fb36c6

--- a/tema3/html/metadatos.html
+++ b/tema3/html/metadatos.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Docker - Programación de aplicaciones telemáticas</title>
+        <title>Metadatos - Programación de aplicaciones telemáticas</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html" class="active">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/http/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/http/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/http/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../../tema2/http/cookies.html">Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 3</li><li class="chapter-item expanded "><a href="../../tema3/html/html.html">HTML</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema3/html/estructura.html">Estructura</a></li><li class="chapter-item expanded "><a href="../../tema3/html/metadatos.html">Metadatos</a></li><li class="chapter-item expanded "><a href="../../tema3/html/contenido.html">Contenido</a></li><li class="chapter-item expanded "><a href="../../tema3/html/navegacion.html">Navegación</a></li><li class="chapter-item expanded "><a href="../../tema3/html/multimedia.html">Multimedia</a></li><li class="chapter-item expanded "><a href="../../tema3/html/formularios.html">Formularios</a></li><li class="chapter-item expanded "><a href="../../tema3/html/semantica.html">Semántica</a></li><li class="chapter-item expanded "><a href="../../tema3/html/vulnerabilidades.html">Vulnerabilidades</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/http/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/http/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/http/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../../tema2/http/cookies.html">Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 3</li><li class="chapter-item expanded "><a href="../../tema3/html/html.html">HTML</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema3/html/estructura.html">Estructura</a></li><li class="chapter-item expanded "><a href="../../tema3/html/metadatos.html" class="active">Metadatos</a></li><li class="chapter-item expanded "><a href="../../tema3/html/contenido.html">Contenido</a></li><li class="chapter-item expanded "><a href="../../tema3/html/navegacion.html">Navegación</a></li><li class="chapter-item expanded "><a href="../../tema3/html/multimedia.html">Multimedia</a></li><li class="chapter-item expanded "><a href="../../tema3/html/formularios.html">Formularios</a></li><li class="chapter-item expanded "><a href="../../tema3/html/semantica.html">Semántica</a></li><li class="chapter-item expanded "><a href="../../tema3/html/vulnerabilidades.html">Vulnerabilidades</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -119,7 +119,7 @@
                         <a href="https://github.com/apicai/web-ejercicios-pat-2023" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/apicai/web-ejercicios-pat-2023/edit/main/src/intro/docker/docker.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/apicai/web-ejercicios-pat-2023/edit/main/src/tema3/html/metadatos.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -148,39 +148,66 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="docker"><a class="header" href="#docker">Docker</a></h1>
-<p><strong>Docker</strong> es el gestor de contenedores más popular. Un <strong>contenedor</strong> es un paquete que incluye todo lo necesario para ejecutar de manera independiente una aplicación. Los contenedores se ejecutan<sup class="footnote-reference"><a href="#1">1</a></sup> de forma aislada y virtualizada de modo que la aplicación solo ve los recursos asignados al contenedor. Esto permite distribuir<sup class="footnote-reference"><a href="#2">2</a></sup> el software garantizando el mismo comportamiento en todos los entornos, orquestar el despliegue de varios contenedores conformando un servicio, y automatizar la asignación de recursos en función de la carga (escalado horizontal)<sup class="footnote-reference"><a href="#3">3</a></sup>.</p>
-<h2 id="objetivos"><a class="header" href="#objetivos">Objetivos</a></h2>
+                        <h1 id="html"><a class="header" href="#html">HTML</a></h1>
+<h2 id="metadatos"><a class="header" href="#metadatos">Metadatos</a></h2>
+<p>El elemento <code>head</code> contiene información para procesar el documento: la codificación de caracteres usada, los estilos asociados<sup class="footnote-reference"><a href="#1">1</a></sup>, los scripts necesarios<sup class="footnote-reference"><a href="#2">2</a></sup>, las palabras claves para indexar el documento por los buscadores<sup class="footnote-reference"><a href="#3">3</a></sup>, instrucciones para controlar las dimensiones y escala de la página, etc.</p>
 <ul>
 <li>
-<p>Usar Docker desde la línea de comandos para crear imágenes y arrancarlas localmente como contenedores.</p>
+<p>Si no se especifica la codificación de caracteres el navegador puede utilizar una que no corresponde con la usada en el documento:</p>
+<div class="table-wrapper"><table><thead><tr><th style="text-align: center">Doc. 1</th><th style="text-align: center">Doc. 2</th></tr></thead><tbody>
+<tr><td style="text-align: center"><iframe src="./files/encoding-1.html" width="100%" height="50" style="background:white;"></iframe></td><td style="text-align: center"><iframe src="./files/encoding-2.html" width="100%" height="50" style="background:white;"></iframe></td></tr>
+</tbody></table>
+</div>
+<blockquote>
+<p>⁉️ <strong>Pregunta:</strong> <em>Los dos documentos HTML están escritos con la misma codificación ¿cuál es y cuál está usando el navegador al leer cada uno de ellos?</em></p>
+</blockquote>
+<blockquote>
+<p>🔍 <strong>Nota:</strong> <em>Intenta ver el código fuente de cada uno de los marcos haciendo click derecho sobre ellos.</em></p>
+</blockquote>
 </li>
 <li>
-<p>Usar Docker Compose para montar un entorno de desarrollo local que nos permita hacer lo mismo que en la práctica de Git (que usaba el entorno de desarrollo en la nube Github-Codespaces).</p>
+<p>Para que la experiencia de usuario sea buena en todos los tamaños y densidades de pantalla para el mismo documento<sup class="footnote-reference"><a href="#4">4</a></sup>, es necesario decirle al navegador que ajuste su contenido al ancho de la pantalla del dispositivo en el que se está presentando<sup class="footnote-reference"><a href="#5">5</a></sup>.</p>
+<ol>
+<li>
+<p>Abre la página <a href="./files/viewport-a.html">A</a> y la página <a href="./files/viewport-b.html">B</a> en dos pestañas y comprueba que se ven idénticas.</p>
 </li>
 <li>
-<p>Tener un entorno de desarrollo local con las herramientas necesarias para las prácticas (<code>git</code>, <code>java</code>, validadores, servidores, etc.).</p>
+<p>En cada una de ellas, abre las herramientas para desarrolladores pulsando en el botón derecho <code>➜</code> Inspeccionar <code>➜</code> Diseño adaptable o Barra de herramientas de dispositivos (icono de móvil/tablet).</p>
+</li>
+<li>
+<p>Comprueba que para el mismo dispositivo móvil la página A y la página B se ven distinto.</p>
+</li>
+</ol>
+<blockquote>
+<p>⁉️ <strong>Pregunta:</strong> <em>¿Cuál de las dos páginas es más legible? ¿Cuál es la diferencia de comportamiento y qué etiqueta HTML lo activa?</em></p>
+</blockquote>
 </li>
 </ul>
 <div class="footnote-definition" id="1"><sup class="footnote-definition-label">1</sup>
-<p>Existen varios &quot;runtimes&quot;, el que usa Docker está basado originalmente en <a href="https://containerd.io/">containerd</a>.</p>
+<p>Mediante la etiqueta <code>&lt;link&gt;</code> o <code>&lt;style&gt;</code>.</p>
 </div>
 <div class="footnote-definition" id="2"><sup class="footnote-definition-label">2</sup>
-<p>El formato en que se distribuye se llama imagen, y el que usa Docker está basado en <a href="https://opencontainers.org/">OCI</a>.</p>
+<p>Mediante la etiqueta <code>&lt;script&gt;</code>.</p>
 </div>
 <div class="footnote-definition" id="3"><sup class="footnote-definition-label">3</sup>
-<p><a href="https://kubernetes.io/">Kubernetes</a> es la plataforma más popular que gestiona la infraestructura hardware subyacente como un único recurso computacional que corre contenedores.</p>
+<p>Mediante las etiquetas <code>&lt;title&gt;</code> y <code>&lt;meta&gt;</code> con la descripción y la configuración para los robots indexadores.</p>
+</div>
+<div class="footnote-definition" id="4"><sup class="footnote-definition-label">4</sup>
+<p>El &quot;diseño web responsive&quot; se apoya en el uso de CSS y en la definición de elementos con ancho adaptable para evitar el scroll horizontal.</p>
+</div>
+<div class="footnote-definition" id="5"><sup class="footnote-definition-label">5</sup>
+<p>Los anchos del contenido se definen en píxeles abstractos, los cuales se traducen en diferente cantidad de píxeles reales dependiendo de la densidad de pantalla de cada dispositivo. Así una pantalla de alta densidad tendrá más píxeles reales por cada píxel abstracto que una de menos densidad, pero en ambas se presentará el contenido igual.</p>
 </div>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../intro/git/cicd.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../tema3/html/estructura.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../../intro/docker/prerrequisitos.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../../tema3/html/contenido.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -190,11 +217,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../intro/git/cicd.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../tema3/html/estructura.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../../intro/docker/prerrequisitos.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../../tema3/html/contenido.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
