--- a/tema3/html/semantica.html
+++ b/tema3/html/semantica.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>CI/CD - Programación de aplicaciones telemáticas</title>
+        <title>Semántica - Programación de aplicaciones telemáticas</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html" class="active">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/http/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/http/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/http/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../../tema2/http/cookies.html">Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 3</li><li class="chapter-item expanded "><a href="../../tema3/html/html.html">HTML</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema3/html/estructura.html">Estructura</a></li><li class="chapter-item expanded "><a href="../../tema3/html/metadatos.html">Metadatos</a></li><li class="chapter-item expanded "><a href="../../tema3/html/contenido.html">Contenido</a></li><li class="chapter-item expanded "><a href="../../tema3/html/navegacion.html">Navegación</a></li><li class="chapter-item expanded "><a href="../../tema3/html/multimedia.html">Multimedia</a></li><li class="chapter-item expanded "><a href="../../tema3/html/formularios.html">Formularios</a></li><li class="chapter-item expanded "><a href="../../tema3/html/semantica.html">Semántica</a></li><li class="chapter-item expanded "><a href="../../tema3/html/vulnerabilidades.html">Vulnerabilidades</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/http/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/http/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/http/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../../tema2/http/cookies.html">Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 3</li><li class="chapter-item expanded "><a href="../../tema3/html/html.html">HTML</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema3/html/estructura.html">Estructura</a></li><li class="chapter-item expanded "><a href="../../tema3/html/metadatos.html">Metadatos</a></li><li class="chapter-item expanded "><a href="../../tema3/html/contenido.html">Contenido</a></li><li class="chapter-item expanded "><a href="../../tema3/html/navegacion.html">Navegación</a></li><li class="chapter-item expanded "><a href="../../tema3/html/multimedia.html">Multimedia</a></li><li class="chapter-item expanded "><a href="../../tema3/html/formularios.html">Formularios</a></li><li class="chapter-item expanded "><a href="../../tema3/html/semantica.html" class="active">Semántica</a></li><li class="chapter-item expanded "><a href="../../tema3/html/vulnerabilidades.html">Vulnerabilidades</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -119,7 +119,7 @@
                         <a href="https://github.com/apicai/web-ejercicios-pat-2023" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/apicai/web-ejercicios-pat-2023/edit/main/src/intro/git/cicd.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/apicai/web-ejercicios-pat-2023/edit/main/src/tema3/html/semantica.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -148,64 +148,72 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="git"><a class="header" href="#git">Git</a></h1>
-<h2 id="cicd"><a class="header" href="#cicd">CI/CD</a></h2>
-<p>Combinando ambos procesos es posible automatizar los despliegues de nuevas versiones con la certeza de que no tienen fallos y que, en caso de haberlos, se impida la integración de los cambios y su despliegue.</p>
-<ol>
-<li>
-<p>Modifica esta sección del workflow de CI con:</p>
-<pre><code class="language-yaml">on:
-  pull_request:
-    branches: [ &quot;main&quot; ]
-  workflow_call:
-</code></pre>
-</li>
-<li>
-<p>Modifica el comienzo de esta sección del workflow de CD con:</p>
-<pre><code class="language-yaml">jobs:
-  ci:
-    uses: ./.github/workflows/ci.yml
-  deploy:
-    needs: [ci]
-</code></pre>
-</li>
-<li>
-<p>Sube los cambios y comprueba el resultado en las Actions del repo (<code>https://github.com/{usuario}/ci-cd/actions</code>).</p>
+                        <h1 id="html"><a class="header" href="#html">HTML</a></h1>
+<h2 id="semántica"><a class="header" href="#semántica">Semántica</a></h2>
+<p>Los elementos HTML deben organizarse en bloques semánticos para: mejorar el indexado de contenidos por parte de los buscadores, mejorar la accesibilidad a la web a personas con discapacidad (lectores de pantalla), y organizar el código de forma que es más mantenible.</p>
 <blockquote>
-<p>⁉️ <strong>Pregunta:</strong> <em>¿Puedes explicar los cambios anteriores a partir del resultado observado?</em></p>
+<p>🔍 <strong>Nota:</strong> <em>Es importante no confundir la organización del contenido (etiquetas semánticas) con su presentación (CSS). Este error es habitual, y de hecho había etiquetas HTML cuya funcionalidad era dar estilo (<code>&lt;font&gt;</code>, <code>&lt;center&gt;</code>, etc.) y han sido deprecadas. Otro error es abusar de etiquetas de bloque sin semántica (<code>&lt;div&gt;</code>, <code>&lt;span&gt;</code>).</em></p>
 </blockquote>
-</li>
-<li>
-<p>Modifica el fichero <code>./src/index.html</code> para que la CI pase, sube los cambios y comprueba el resultado en las Actions del repo y en la web desplegada.</p>
-<blockquote>
-<p>⁉️ <strong>Pregunta:</strong> <em>¿Qué Actions se ejecutan al hacer una PR y cuáles se ejecutan al mezclar cambios en <code>main</code>? ¿Por qué representa un problema subir directamente los cambios a <code>main</code> en lugar de usar una PR?</em></p>
-</blockquote>
-</li>
-<li>
-<p>Entra en las reglas de protección de ramas del repo en Github (<code>https://github.com/{usuario}/ci-cd/settings/branches</code>) <code>➜</code> &quot;Add rule&quot; y usa estos valores:</p>
 <ul>
-<li>Branch name pattern: <code>main</code></li>
-<li>☑️ Require a pull request before merging</li>
-<li>☑️ Require status checks to pass before merging</li>
-</ul>
+<li>
+<p>A continuación se muestran diferentes elementos HTML usando etiquetas no semánticas:</p>
+<pre><code class="language-html">&lt;span&gt;Título principal&lt;/span&gt;
+&lt;div onclick=&quot;&quot;&gt;Enviar formulario&lt;/span&gt;
+&lt;b&gt;Este texto es importante resaltarlo&lt;/b&gt;
+Párrafo 1&lt;br&gt;&lt;br&gt;Párrafo 2
+Campo: &lt;input type=&quot;text&quot;&gt;
+Más información sobre accesibilidad &lt;a href=&quot;&quot;&gt;aquí&lt;/a&gt;.
+</code></pre>
 <blockquote>
-<p>⁉️ <strong>Pregunta:</strong> <em>¿Qué ocurre ahora al intentar hacer cambios directamente en <code>main</code>? ¿y al hacer una PR conteniendo un cambio que no pasa la CI?</em></p>
+<p>⁉️ <strong>Pregunta:</strong> <em>¿Con qué etiquetas semánticas sustituirías los anteriores elementos?</em></p>
 </blockquote>
 </li>
-</ol>
+<li>
+<p>A continuación se muestra un ejemplo de organización de una web usando los correspondientes bloques semánticos:</p>
+<pre><code class="language-html">&lt;header&gt;
+  &lt;h1&gt;Cabecera común a toda la web&lt;/h1&gt;
+&lt;/header&gt;
+&lt;nav&gt;&lt;!-- Menú de navegación por la web --&gt; 
+  &lt;ul&gt;
+      &lt;li&gt;&lt;a href=&quot;#&quot;&gt;Menu 1&lt;/a&gt;&lt;/li&gt;
+      &lt;li&gt;&lt;a href=&quot;#&quot;&gt;Menu 2&lt;/a&gt;&lt;/li&gt;
+  &lt;/ul&gt;
+&lt;/nav&gt;
+&lt;main&gt; &lt;!-- Contenido principal de la página actual--&gt;
+  &lt;article&gt; &lt;!-- Algo autocontenido, distribuible, reusable de forma independiente --&gt;
+    &lt;h2&gt;Título del artículo&lt;/h2&gt;
+    &lt;section&gt;
+      &lt;h3&gt;Título de una sección dentro del artículo&lt;/h2&gt;
+      &lt;p&gt;Contenido de la sección&lt;/p&gt;
+    &lt;/section&gt;
+    &lt;aside&gt;
+      &lt;h3&gt;Contenido relacionado indirectamente: citas, tabla de contenidos, etc.&lt;/h3&gt;
+      &lt;figure&gt;
+        &lt;img alt=&quot;Imagen con leyenda&quot; /&gt;
+        &lt;figcaption&gt;Leyenda de la imagen&lt;/figcaption&gt;
+      &lt;/figure&gt;
+    &lt;/aside&gt;
+  &lt;/article&gt;
+&lt;/main&gt;
+&lt;footer&gt;
+  &lt;p&gt;Pie de página para toda la web&lt;/p&gt;
+&lt;/footer&gt;
+</code></pre>
 <blockquote>
-<p>⚠️ <strong>Importante</strong>: <em>para o borra el <a href="https://github.com/codespaces">Codespace</a> al terminar de usarlo.</em></p>
+<p>⁉️ <strong>Ejercicio:</strong> <em>Entra en <a href="https://developer.mozilla.org/en-US/docs/Learn/HTML/Introduction_to_HTML/Document_and_website_structure">esta página web</a> e identifica cada sección con alguno de los bloques semánticos anteriores.</em></p>
 </blockquote>
+</li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../intro/git/cd.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../tema3/html/formularios.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../../intro/docker/docker.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../../tema3/html/vulnerabilidades.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -215,11 +223,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../intro/git/cd.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../tema3/html/formularios.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../../intro/docker/docker.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../../tema3/html/vulnerabilidades.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
