--- a/tema2/http/peticiones.html
+++ b/tema2/http/peticiones.html
@@ -12,30 +12,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#ffffff" />
 
-        <link rel="icon" href="../favicon.svg">
-        <link rel="shortcut icon" href="../favicon.png">
-        <link rel="stylesheet" href="../css/variables.css">
-        <link rel="stylesheet" href="../css/general.css">
-        <link rel="stylesheet" href="../css/chrome.css">
-        <link rel="stylesheet" href="../css/print.css" media="print">
+        <link rel="icon" href="../../favicon.svg">
+        <link rel="shortcut icon" href="../../favicon.png">
+        <link rel="stylesheet" href="../../css/variables.css">
+        <link rel="stylesheet" href="../../css/general.css">
+        <link rel="stylesheet" href="../../css/chrome.css">
+        <link rel="stylesheet" href="../../css/print.css" media="print">
 
         <!-- Fonts -->
-        <link rel="stylesheet" href="../FontAwesome/css/font-awesome.css">
-        <link rel="stylesheet" href="../fonts/fonts.css">
+        <link rel="stylesheet" href="../../FontAwesome/css/font-awesome.css">
+        <link rel="stylesheet" href="../../fonts/fonts.css">
 
         <!-- Highlight.js Stylesheets -->
-        <link rel="stylesheet" href="../highlight.css">
-        <link rel="stylesheet" href="../tomorrow-night.css">
-        <link rel="stylesheet" href="../ayu-highlight.css">
+        <link rel="stylesheet" href="../../highlight.css">
+        <link rel="stylesheet" href="../../tomorrow-night.css">
+        <link rel="stylesheet" href="../../ayu-highlight.css">
 
         <!-- Custom theme stylesheets -->
-        <link rel="stylesheet" href="../theme/theme.css">
+        <link rel="stylesheet" href="../../theme/theme.css">
 
     </head>
     <body>
         <!-- Provide site root to javascript -->
         <script>
-            var path_to_root = "../";
+            var path_to_root = "../../";
             var default_theme = window.matchMedia("(prefers-color-scheme: dark)").matches ? "navy" : "light";
         </script>
 
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../tema2/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../tema2/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../tema2/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../tema2/peticiones.html" class="active">Peticiones</a></li><li class="chapter-item expanded "><a href="../tema2/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../tema2/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../tema2/cookies.html">Cookies</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/http/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/http/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/peticiones.html" class="active">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/http/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../../tema2/http/cookies.html">Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 3</li><li class="chapter-item expanded "><a href="../../tema3/html/html.html">HTML</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema3/html/estructura.html">Estructura</a></li><li class="chapter-item expanded "><a href="../../tema3/html/metadatos.html">Metadatos</a></li><li class="chapter-item expanded "><a href="../../tema3/html/contenido.html">Contenido</a></li><li class="chapter-item expanded "><a href="../../tema3/html/navegacion.html">Navegación</a></li><li class="chapter-item expanded "><a href="../../tema3/html/multimedia.html">Multimedia</a></li><li class="chapter-item expanded "><a href="../../tema3/html/formularios.html">Formularios</a></li><li class="chapter-item expanded "><a href="../../tema3/html/semantica.html">Semántica</a></li><li class="chapter-item expanded "><a href="../../tema3/html/vulnerabilidades.html">Vulnerabilidades</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -113,13 +113,13 @@
                     <h1 class="menu-title">Programación de aplicaciones telemáticas</h1>
 
                     <div class="right-buttons">
-                        <a href="../print.html" title="Print this book" aria-label="Print this book">
+                        <a href="../../print.html" title="Print this book" aria-label="Print this book">
                             <i id="print-button" class="fa fa-print"></i>
                         </a>
                         <a href="https://github.com/apicai/web-ejercicios-pat-2023" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/apicai/web-ejercicios-pat-2023/edit/main/src/tema2/peticiones.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/apicai/web-ejercicios-pat-2023/edit/main/src/tema2/http/peticiones.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -231,11 +231,11 @@ curl https://httpbin.org/anything -d &quot;12345&quot; -v --http2
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../tema2/conexiones.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../tema2/http/conexiones.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../tema2/respuestas.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../../tema2/http/respuestas.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -245,11 +245,11 @@ curl https://httpbin.org/anything -d &quot;12345&quot; -v --http2
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../tema2/conexiones.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../tema2/http/conexiones.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../tema2/respuestas.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../../tema2/http/respuestas.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
@@ -264,16 +264,16 @@ curl https://httpbin.org/anything -d &quot;12345&quot; -v --http2
         </script>
 
 
-        <script src="../elasticlunr.min.js"></script>
-        <script src="../mark.min.js"></script>
-        <script src="../searcher.js"></script>
+        <script src="../../elasticlunr.min.js"></script>
+        <script src="../../mark.min.js"></script>
+        <script src="../../searcher.js"></script>
 
-        <script src="../clipboard.min.js"></script>
-        <script src="../highlight.js"></script>
-        <script src="../book.js"></script>
+        <script src="../../clipboard.min.js"></script>
+        <script src="../../highlight.js"></script>
+        <script src="../../book.js"></script>
 
         <!-- Custom JS scripts -->
-        <script src="../theme/theme.js"></script>
+        <script src="../../theme/theme.js"></script>
 
 
     </body>
