--- a/tema3/html/navegacion.html
+++ b/tema3/html/navegacion.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>CI/CD - Programación de aplicaciones telemáticas</title>
+        <title>Navegación - Programación de aplicaciones telemáticas</title>
 
 
         <!-- Custom HTML head -->
@@ -81,7 +81,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html" class="active">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/http/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/http/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/http/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../../tema2/http/cookies.html">Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 3</li><li class="chapter-item expanded "><a href="../../tema3/html/html.html">HTML</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema3/html/estructura.html">Estructura</a></li><li class="chapter-item expanded "><a href="../../tema3/html/metadatos.html">Metadatos</a></li><li class="chapter-item expanded "><a href="../../tema3/html/contenido.html">Contenido</a></li><li class="chapter-item expanded "><a href="../../tema3/html/navegacion.html">Navegación</a></li><li class="chapter-item expanded "><a href="../../tema3/html/multimedia.html">Multimedia</a></li><li class="chapter-item expanded "><a href="../../tema3/html/formularios.html">Formularios</a></li><li class="chapter-item expanded "><a href="../../tema3/html/semantica.html">Semántica</a></li><li class="chapter-item expanded "><a href="../../tema3/html/vulnerabilidades.html">Vulnerabilidades</a></li></ol></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../../index.html">Introducción</a></li><li class="chapter-item expanded "><a href="../../intro/git/git.html">Git</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/git/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/git/repositorio.html">Repositorio</a></li><li class="chapter-item expanded "><a href="../../intro/git/ramas.html">Ramas</a></li><li class="chapter-item expanded "><a href="../../intro/git/gitflow.html">Git flow</a></li><li class="chapter-item expanded "><a href="../../intro/git/ci.html">CI</a></li><li class="chapter-item expanded "><a href="../../intro/git/cd.html">CD</a></li><li class="chapter-item expanded "><a href="../../intro/git/cicd.html">CI/CD</a></li></ol></li><li class="chapter-item expanded "><a href="../../intro/docker/docker.html">Docker</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../intro/docker/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../intro/docker/imagenes.html">Imágenes</a></li><li class="chapter-item expanded "><a href="../../intro/docker/contenedores.html">Contenedores</a></li><li class="chapter-item expanded "><a href="../../intro/docker/orquestacion.html">Orquestación</a></li><li class="chapter-item expanded "><a href="../../intro/docker/entorno.html">Entorno desarrollo</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 1</li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/paradigmas.html">Paradigmas de programación</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema1/paradigmas/estructurada.html">Estructurada</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/procedural.html">Imperativa - Procedural</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/objetos.html">Imperativa - Orientada a objetos</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/funcional.html">Declarativa - Funcional</a></li><li class="chapter-item expanded "><a href="../../tema1/paradigmas/reactiva.html">Declarativa - Reactiva</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 2</li><li class="chapter-item expanded "><a href="../../tema2/http/http.html">HTTP</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema2/http/prerrequisitos.html">Prerrequisitos</a></li><li class="chapter-item expanded "><a href="../../tema2/http/conexiones.html">Conexiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/peticiones.html">Peticiones</a></li><li class="chapter-item expanded "><a href="../../tema2/http/respuestas.html">Respuestas</a></li><li class="chapter-item expanded "><a href="../../tema2/http/servidor.html">Servidor</a></li><li class="chapter-item expanded "><a href="../../tema2/http/cookies.html">Cookies</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">Tema 3</li><li class="chapter-item expanded "><a href="../../tema3/html/html.html">HTML</a><a class="toggle"><div>❱</div></a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../../tema3/html/estructura.html">Estructura</a></li><li class="chapter-item expanded "><a href="../../tema3/html/metadatos.html">Metadatos</a></li><li class="chapter-item expanded "><a href="../../tema3/html/contenido.html">Contenido</a></li><li class="chapter-item expanded "><a href="../../tema3/html/navegacion.html" class="active">Navegación</a></li><li class="chapter-item expanded "><a href="../../tema3/html/multimedia.html">Multimedia</a></li><li class="chapter-item expanded "><a href="../../tema3/html/formularios.html">Formularios</a></li><li class="chapter-item expanded "><a href="../../tema3/html/semantica.html">Semántica</a></li><li class="chapter-item expanded "><a href="../../tema3/html/vulnerabilidades.html">Vulnerabilidades</a></li></ol></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -119,7 +119,7 @@
                         <a href="https://github.com/apicai/web-ejercicios-pat-2023" title="Git repository" aria-label="Git repository">
                             <i id="git-repository-button" class="fa fa-github"></i>
                         </a>
-                        <a href="https://github.com/apicai/web-ejercicios-pat-2023/edit/main/src/intro/git/cicd.md" title="Suggest an edit" aria-label="Suggest an edit">
+                        <a href="https://github.com/apicai/web-ejercicios-pat-2023/edit/main/src/tema3/html/navegacion.md" title="Suggest an edit" aria-label="Suggest an edit">
                             <i id="git-edit-button" class="fa fa-edit"></i>
                         </a>
 
@@ -148,64 +148,56 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="git"><a class="header" href="#git">Git</a></h1>
-<h2 id="cicd"><a class="header" href="#cicd">CI/CD</a></h2>
-<p>Combinando ambos procesos es posible automatizar los despliegues de nuevas versiones con la certeza de que no tienen fallos y que, en caso de haberlos, se impida la integración de los cambios y su despliegue.</p>
-<ol>
-<li>
-<p>Modifica esta sección del workflow de CI con:</p>
-<pre><code class="language-yaml">on:
-  pull_request:
-    branches: [ &quot;main&quot; ]
-  workflow_call:
-</code></pre>
-</li>
-<li>
-<p>Modifica el comienzo de esta sección del workflow de CD con:</p>
-<pre><code class="language-yaml">jobs:
-  ci:
-    uses: ./.github/workflows/ci.yml
-  deploy:
-    needs: [ci]
-</code></pre>
-</li>
-<li>
-<p>Sube los cambios y comprueba el resultado en las Actions del repo (<code>https://github.com/{usuario}/ci-cd/actions</code>).</p>
-<blockquote>
-<p>⁉️ <strong>Pregunta:</strong> <em>¿Puedes explicar los cambios anteriores a partir del resultado observado?</em></p>
-</blockquote>
-</li>
-<li>
-<p>Modifica el fichero <code>./src/index.html</code> para que la CI pase, sube los cambios y comprueba el resultado en las Actions del repo y en la web desplegada.</p>
-<blockquote>
-<p>⁉️ <strong>Pregunta:</strong> <em>¿Qué Actions se ejecutan al hacer una PR y cuáles se ejecutan al mezclar cambios en <code>main</code>? ¿Por qué representa un problema subir directamente los cambios a <code>main</code> en lugar de usar una PR?</em></p>
-</blockquote>
-</li>
-<li>
-<p>Entra en las reglas de protección de ramas del repo en Github (<code>https://github.com/{usuario}/ci-cd/settings/branches</code>) <code>➜</code> &quot;Add rule&quot; y usa estos valores:</p>
+                        <h1 id="html"><a class="header" href="#html">HTML</a></h1>
+<h2 id="navegación"><a class="header" href="#navegación">Navegación</a></h2>
+<p>La etiqueta <code>&lt;a href=&quot;{URL}&quot;&gt;texto o bloque&lt;/a&gt;</code> permite: navegar a otra web (con una URL absoluta), a otra página dentro de la web actual (con una URL relativa) o a un elemento de la página actual (indicando el <code>#fragmento</code>).</p>
 <ul>
-<li>Branch name pattern: <code>main</code></li>
-<li>☑️ Require a pull request before merging</li>
-<li>☑️ Require status checks to pass before merging</li>
-</ul>
+<li>
+<p>Crea los 3 enlaces indicados en los comentarios del siguiente HTML:</p>
+<div class="codepen" data-prefill data-height="350" data-theme-id="light" data-default-tab="html,result" data-editable="true" style="opacity:0">
+<pre data-lang="css">
+#contenido { margin:120px 0 120px 0; }
+</pre>
+<pre data-lang="html">
+&lt;h1>Navegación&lt;/h1>
+&lt;!-- 1. Enlace al elemento cuyo id es "contenido" -->
+&lt;a>Contenido&lt;/a>
+&lt;!-- 2. Enlace absoluto a https://en.wikipedia.org/wiki/Hyperlink -->
+&lt;a>Externo&lt;/a>
+&lt;!-- 3. Enlace relativo a ./dir/file.html -->
+&lt;a>Interno&lt;/a>
+<p>&lt;p id=&quot;contenido&quot;&gt;Este elemento puede enlazarse utilizando su id en el fragmento de la URL: #contenido&lt;/p&gt;
+&lt;a href=&quot;#&quot;&gt;Volver arriba&lt;/a&gt;
+</pre></p>
+</div>
 <blockquote>
-<p>⁉️ <strong>Pregunta:</strong> <em>¿Qué ocurre ahora al intentar hacer cambios directamente en <code>main</code>? ¿y al hacer una PR conteniendo un cambio que no pasa la CI?</em></p>
+<p>🔍 <strong>Notas:</strong> ❶ <em>Para volver tras pulsar tus enlaces, dale al botón &quot;Rerun&quot;.</em> ❷ <em>El enlace relativo lo es al dominio en el que se encuentra alojado que es Codepen.io.</em></p>
 </blockquote>
 </li>
-</ol>
+<li>
+<p>Los enlaces relativos pueden ser al dominio o al path actual:</p>
+<iframe src="./files/relative-link-a.html" width="100%" height="70" style="background:white;"></iframe>
+</li>
+<li>
+<p>Añade el siguiente atributo a los enlaces anteriores <code>target=&quot;_blank&quot;</code> y observa el comportamiento.</p>
+</li>
+<li>
+<p>Utiliza esta URL en alguno de los enlaces anteriores <code>mailto:usuario@email.com?subject=Asunto&amp;body=Contenido</code> y comprueba el comportamiento.</p>
 <blockquote>
-<p>⚠️ <strong>Importante</strong>: <em>para o borra el <a href="https://github.com/codespaces">Codespace</a> al terminar de usarlo.</em></p>
+<p>🔍 <strong>Nota:</strong> <em><code>mailto</code> es una URL con un protocolo diferente a HTTP, y que el SO operativo puede reconocer para abrir la aplicación que es capaz de entender dicho protocolo. Existen muchos otros protocolos o <a href="https://en.wikipedia.org/wiki/List_of_URI_schemes">esquemas URI</a> que podrían utilizarse potencialmente en un enlace.</em></p>
 </blockquote>
+</li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../../intro/git/cd.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../../tema3/html/contenido.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next" href="../../intro/docker/docker.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="../../tema3/html/multimedia.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
 
@@ -215,11 +207,11 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../../intro/git/cd.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../../tema3/html/contenido.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next" href="../../intro/docker/docker.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="../../tema3/html/multimedia.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
